<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item

            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/profile" />
        <item

            android:id="@+id/nav_search"

            android:icon="@drawable/ic_find_in_page_black_24dp"
            android:title="@string/search" />
        <item

            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/scan" />
        <item

            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/message" />
        <item

            android:id="@+id/nav_friend_list"
            android:icon="@drawable/ic_recent_actors_black_24dp"
            android:title="@string/friend_list" />
        <item

            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/groups" />
        <item

            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/requests" />
        <item

            android:id="@+id/nav_requests_friends"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/request_friend" />


    </group>

    <item android:title="@string/for_logout">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
