<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorapp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="100dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo" />

        <!-- Email Label -->

        <EditText

            android:id="@+id/input_email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_name"
            android:drawablePadding="12dp"

            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            android:paddingTop="20dp"
            android:textColorHint="#ffffff" />

        <!-- Password Label -->
        <EditText

            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_pass"
            android:drawablePadding="12dp"

            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:paddingTop="20dp"
            android:textColorHint="#ffffff" />

        <Button

            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:onClick="login"
            android:padding="12dp"
            android:text="@string/login" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView

            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:onClick="getSignUp"
            android:text="No account yet? Create one"
            android:textColor="#ffffff"
            android:textSize="16dip" />

        <TextView

            android:id="@+id/a"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:onClick="temp"
            android:text="Open Tags Activity"
            android:textColor="#ffffff"
            android:textSize="16dip" />


    </LinearLayout>

</ScrollView>
